 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

Apache HCatalog Change Log

Release 0.4.0 - Unreleased

  INCOMPATIBLE CHANGES
  HCAT-279 Remove remaining code mentioning isd/osd (diajy via gates)

  HCAT-261 Enable more DDL statements for HCat (daijy via gates)

  HCAT-252 Rework HBase storage driver into HBase storage handler (rohini via toffer) 

  HCAT-265 remove deprecated HCatStorageHandler (toffer)

  HCAT-239. Changes to HCatInputFormat to make it use SerDes instead of StorageDrivers (vikram.dixit via gates)

  HCAT-245. StorageHandler authorization providers (enis via hashutosh) 

  HCAT-241. Changes to HCatRecord to support switch from StorageDriver to SerDe (khorgath)

  HCAT-240. Changes to HCatOutputFormat to make it use SerDes instead of StorageDriver (toffer)

  NEW FEATURES
  HCAT-249 Rework JSON StorageDriver into a JSON SerDe (khorgath via gates)

  HCAT-255 Define hadoop properties on the hcat command line (ctdean via gates)

  HCAT-2 Support nested schema conversion between Hive an Pig (julienledem via hashutosh)

  IMPROVEMENTS
  HCAT-266 Upgrade HBase dependency to 0.92 (thw via toffer)

  HCAT-243 HCat e2e tests need to change to not use StorageDrivers (gaets)

  HCAT-256 HCatalog should provide its classpath to tools (gates)

  HCAT-266 Upgrade HBase dependency to 0.92. (thw via toffer)

  HCAT-253 HBase revision manager should configure/drop znodes in the create/drop table meta hooks in the storage handler. (avandana via toffer)

  HCAT-259 Make readFields() and write() in LazyHCatRecord work (gates via khorgath)

  HCAT-194. Better error messages for HCatalog access control errors (julienledem via hashutosh)  
  
  OPTIMIZATIONS

  BUG FIXES
  HCAT 290 Changes in HBase maven objects breaks hcat build (gates)
